--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,22 @@
+::-webkit-scrollbar {
+  width: 7px;
+}
+
+::-webkit-scrollbar-track {
+  box-shadow: inset 0 0 5px grey;
+  border-radius: 10px;
+}
+
+::-webkit-scrollbar-thumb {
+  background: rgb(160, 160, 160);
+  border-radius: 10px;
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background: #ffffff;
+}
+
+
 body {
   margin: 0;
   padding: 0;
@@ -48,6 +67,8 @@ body {
 }
 
 .selected-files {
+  max-height: 250px;
+  overflow-y: scroll;
   gap: 40px;
   padding: 20px;
   background: rgba(255, 255, 255, 0.2);
@@ -122,7 +143,7 @@ body {
   transform: scale(1.05);
 }
 
-.countdown{
+.countdown {
   font-family: 'SF Pro Display', sans-serif;
   color: white;
 }
